[workspace]

members = ["client"]


[package]
name = "new-app"
version = "0.1.0"
edition = "2024"

[dependencies]
new-app-app = { path = "app" }

[build-dependencies]
new-app-app = { path = "app" }
sails-rs = { version = "0.9.1", features = ["wasm-builder"] }
sails-idl-gen = "0.9.1"

[dev-dependencies]
new-app = { path = ".", features = ["wasm-binary"] }
new-app-client = { path = "client" }
sails-rs = { version = "0.9.1", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
